--- a/ShoppingSite/pom.xml
+++ b/ShoppingSite/pom.xml
@@ -76,5 +76,10 @@
 	    <artifactId>spring-security-core</artifactId>
 	    <version>5.3.1.RELEASE</version>
 	</dependency>
+	<dependency>  
+    	<groupId>org.springframework.security</groupId>  
+    	<artifactId>spring-security-taglibs</artifactId>  
+    	<version>5.3.0.RELEASE</version>  
+	</dependency>
   </dependencies>
 </project>
